fix(table of contents): multiple scrollbars (https://github.com/jackyzha0/quartz/issues/1388)

--- a/quartz/components/styles/toc.scss
+++ b/quartz/components/styles/toc.scss
@@ -1,5 +1,12 @@
 .toc {
   overflow-y: auto;
+  &.desktop-only {
+    max-height: 40%;
+  }
+  > #toc-content > .overflow {
+    max-height: unset;
+    overflow-y: unset;
+  }
 }
 
 button#toc {
